@@ -267,7 +267,10 @@ void *pvwarpb_new(t_symbol *s, int argc, t_atom *argv)
     fft->winfac = FFTEASE_DEFAULT_WINFAC;
     x->warpfunc = (t_float *) calloc(8192, sizeof(t_float));
     if(argc > 0){ x->buffername = atom_getsymbolarg(0, argc, argv); }
-    else { post("%s: Must specify array name", OBJECT_NAME); return NULL; }
+    else {
+        pd_error(x,"%s: you must provide a valid buffer name",OBJECT_NAME);
+        x->buffername = &s_;
+    }
     if(argc > 1){ fft->N = (int) atom_getfloatarg(1, argc, argv); }
     if(argc > 2){ fft->overlap = (int) atom_getfloatarg(2, argc, argv); }
     return x;
