@@ -51,9 +51,9 @@ static void residency_acquire_stop(t_residency *x);
 static void residency_transpose(t_residency *x, t_floatarg tf);
 static void residency_synthresh(t_residency *x, t_floatarg thresh);
 static void residency_oscbank(t_residency *x, t_floatarg flag);
-static void residency_meminfo( t_residency *x );
-static void residency_size( t_residency *x, t_floatarg newsize);
-static void residency_verbose( t_residency *x, t_floatarg t);
+// static void residency_meminfo( t_residency *x );
+// static void residency_size( t_residency *x, t_floatarg newsize);
+// static void residency_verbose( t_residency *x, t_floatarg t);
 static void do_residency(t_residency *x);
 
 void residency_tilde_setup(void)
@@ -162,7 +162,10 @@ void *residency_new(t_symbol *s, int argc, t_atom *argv)
     x->last_framecount = x->framecount = 0;
 
     if(argc > 0){ x->duration = atom_getfloatarg(0, argc, argv) / 1000.0; }
-    else { post("%s: must give duration argument",OBJECT_NAME); return NULL; }
+    else {
+        post("%s: no duration given, using a default of 5000 ms",OBJECT_NAME);
+        x->duration = 5.0;
+    }
     if(argc > 1){ fft->N = (int) atom_getfloatarg(1, argc, argv); }
     if(argc > 2){ fft->overlap = (int) atom_getfloatarg(2, argc, argv); }
     return x;
