@@ -4,6 +4,17 @@ Version 3.0.2 (not yet released)
 
 Fixed a memory allocation bug in disarrain~ that could cause crashes on 64-bit Pd.
 
+Enabled instantation of the following objects when required parameters are not provided.
+
+- enrich~
+- pvwarpb~
+- reanimator~
+- resent~
+- residency~
+- residency_buffer~
+
+Removed spurious lyonpotpourri-meta.pd reference from the Makefile
+
 Version 3.0.1
 
 All the help files are updated. Several of the externals had an initialization bug that prevented them from being correctly initialized, if parameters were sent to them prior to the DACs being turned on. The following objects received this update:
